force-app/main/default/objects/Order/fields/Applied_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Applied_Discounts__c</fullName>
    <label>Applied Discounts</label>
    <type>TextArea</type>
</CustomField>