force-app/main/default/objects/Order/fields/ComplaintCaseId__c.field-meta.xml
<CustomField>
    <fullName>ComplaintCaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ComplaintCaseId</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>