force-app/main/default/objects/Order/fields/Final_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Order_Amount__c</fullName>
    <formula>TotalAmount - BLANKVALUE(Discount_Amount__c, 0) - BLANKVALUE(Refunded_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>