force-app/main/default/objects/Order/fields/Pending_Complaint_JSON__c.field-meta.xml
<CustomField>
    <fullName>Pending_Complaint_JSON__c</fullName>
    <label>Pending Complaint JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>