force-app/main/default/objects/Order/fields/Refunded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refunded_Amount__c</fullName>
    <label>Refunded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>